--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
   text-decoration: #0a043c;
   color-adjust: inherit;
   font-size: 15px;
+  max-width: 600px;
+  margin: 0 auto;
+  border: 0.5em solid #0a043c;
 }
 navbar {
   position: relative;
@@ -11,13 +14,7 @@ navbar {
 }
 .fancy {
   text-align: center;
-  margin: 20px auto;
-  position: static;
-  padding: 1em;
-  border: 0.5em solid #0a043c;
-  width: 50em;
-  height: 46em;
-  border: radius 90%;
+  padding: 0;
   background-color: #f1f6f9;
   box-shadow: 0px 10px 8px #0a043c;
 }
@@ -37,7 +34,6 @@ navbar {
 .bottom {
   text-align: center;
   display: block;
-  margin: 20px auto;
   cursor: pointer;
   color: #0a043c;
 }
