--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ navbar {
 h1 {
   line-height: 30px;
 }
-.fancy {
+.container-app {
   text-align: center;
   padding: 0;
   background-color: #f1f6f9;
