--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ h1 {
   background-color: #f1f6f9;
   box-shadow: 0px 10px 8px #0a043c;
 }
+li {
+  list-style-type: none;
+}
 
 .button {
   background: #03506f;
