--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
   font-family: "Acme", sans-serif;
   text-decoration: #0a043c;
   color-adjust: inherit;
-  font-size: 15px;
+  font-size: 30px;
   padding: 0;
-  max-width: 600px;
+  max-width: 700px;
   margin: 0 auto;
   border: 0.5em solid #0a043c;
 }
@@ -24,6 +24,8 @@ h1 {
 }
 li {
   list-style-type: none;
+  font-size: 25px;
+  text-transform: capitalize;
 }
 
 .button {
