--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   color-adjust: inherit;
   padding: 0;
   line-height: 25px;
-  max-width: 600px;
+  max-width: 700px;
   margin: 0 auto;
   border: 0.3em solid #0a043c;
 }
@@ -15,22 +15,27 @@ navbar {
 }
 h1 {
   line-height: 30px;
+  color: #0a043c;
 }
 
 .container-app {
   text-align: center;
   background-color: #f1f6f9;
-  box-shadow: 0px 10px 8px #0a043c;
+  box-shadow: 0px 10px 8px#0a043c;
 }
 li {
   list-style-type: none;
-  font-size: 25px;
+  font-size: 20px;
   text-transform: capitalize;
 }
 li:first-letter {
   text-transform: capitalize;
 }
-
+.li-updated {
+  text-align: center;
+  color: #03506f;
+  font-size: 15px;
+}
 .button {
   background: #03506f;
   font-size: 10px;
